--- a/public/css/css.css
+++ b/public/css/css.css
@@ -4,6 +4,7 @@ body {
 	background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    overflow-x: hidden;
 }
  input {
       border: 0;
