--- a/app/views/hospitalForm.ejs
+++ b/app/views/hospitalForm.ejs
@@ -30,6 +30,7 @@
 <body>
 <div id ="top1" class="wow bounceInUp" style="top:10px;right:10px;z-index:10000;position:absolute" >
 <div class="container">
+<div style="position:absolute;left:10px;"><img src="/img/logo2.png" height="100px"></div>
 <div style="position:absolute;right:50px;">
 <form class="form-signin" action="/" method="post">
 
