--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -58,12 +58,20 @@ color:#FFFFFF;
     </div>
  --><!--<a href="/register">Register</a>
 <a href="/login">Login</a>-->
-<div class="float:left;top:10px"><h1>Paradar</h1></div>
 
 
-<div class="container">
-<div class="col-sm-6"></div>
-<div class="col-sm-6 wow pulse" >
+
+<div class="container" style="color:white">
+<div class="col-sm-6">
+    <h1>Welcome to <b>MapDemic</b></h1><br><br><br><hr>
+    
+    <img src="/img/mapdemic.png" height="300px" style="float:right">
+    <br>
+    MapDemic gives you real time data of the number of admitted patients of a particular disease around you. <br><br><br>
+    With MapDemic, you can save track and study the spread of a disease, and can save your loved ones from potential epidemics.
+</div>
+<div class="col-sm-6 wow bounceInUp" >
+<br><br><br><br><br><br>
 <form class="form-signin" action="/" method="post">
 <h2 class="form-signin-heading text-center">Register</h2>
 
