--- a/app/views/heatmap.ejs
+++ b/app/views/heatmap.ejs
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="http://cdn.pubnub.com/pubnub-3.7.1.min.js"></script>
-<link rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-
+    
     <meta charset="utf-8">
     <title>Heatmaps</title>
     <style>
@@ -31,6 +27,7 @@
   padding-left: 10px;
 }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="/js/maps.js">
     </script>
   </head>
